# relaymcp

./: pyproject.toml
src/relaymcp/: __init__.py  main.py  routes.py
